# DesignPattern

./: CMakeLists.txt  README.md  main.cpp
Decorator/: Beverage.cpp  Beverage.h
Delegate/: Delegate.cpp  Delegate.h
Factory/: PizzaStory.cpp  PizzaStory.h
Iterator/: Menu.cpp  Menu.h
PublishANDSubscribe/: WeatherBoard.cpp  WeatherBoard.h  WeatherStation.cpp  WeatherStation.h
Singleton/: Singleton.cpp  Singleton.h
TemplateMethod/: People.cpp  People.h  TemplateMethod.cpp  TemplateMethod.h
